# testing

./: .gitignore  CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c
Python exe/: CDC.py  Health_CDC.py  pico_monitor.py
UF2 Files/: After Cleanup.uf2  Before Cleanup.uf2  HID_MSC_CDC.uf2  HID_MSC_CDC_2.uf2  HID_MSC_CDC_LOG.uf2  HID_MSC_CDC_LOG_WIFI_HTTPS.uf2  HID_Storage.uf2  cryptoauth_pico.uf2
include/cryptoauthlib/lib/: atca_config.h
include/cryptoauthlib/lib/cmake/: mbedtls.cmake
include/cryptoauthlib/lib/mbedtls/: atca_mbedtls_ecdsa.c  atca_mbedtls_interface.h
include/cryptoauthlib/lib/wolfssl/: atca_wolfssl_interface.c
lib/cryptoauthlib/lib/atcacert/: atcacert.h
lib/cryptoauthlib/lib/mbedtls/: atca_mbedtls_ecdh.c  atca_mbedtls_wrap.c  atca_mbedtls_wrap.h
lib/cryptoauthlib/lib/openssl/: atca_openssl_interface.c
lib/cryptoauthlib/lib/pkcs11/: pkcs11_cert.c  pkcs11_config.c  pkcs11_key.c  pkcs11_object.c  pkcs11_session.c  pkcs11_signature.c  pkcs11_slot.c
pico_hid_test/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
project/: CMakeLists.txt  hal_pico_i2c.c  hal_pico_i2c.h  hw_config.c  main.c
project/header/: https_config.h  mbedtls_config.h
project/include/: https_config.h  lwipopts.h  mbedtls_config.h  picohttps.h  tusb_config.h
src/: CMakeLists.txt  config.h  hal_pico_i2c.c  hid_handler.c  hid_manager.c  hid_test.c  hid_test.h  https_client.c  https_manager.c  hw_config.c  json_processor.c  main.c  msc_manager.c  msd_handler.c  msd_handler.h  usb_descriptors.c  wifi.c  wifi_manager.c
src/include/: hid_manager.h  https_client.h  https_config.h  https_manager.h  json_processor.h  lwipopts.h  mbedtls_config.h  msc_manager.h  wifi.h  wifi_manager.h
